--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -9,12 +9,12 @@
         "format": "eslint --fix --ext .js ./ && prettier --write './**/*.{json,md}'"
     },
     "dependencies": {
-        "@typescript-eslint/eslint-plugin": "^6.7.4",
-        "@typescript-eslint/parser": "^6.7.4",
-        "eslint": "8.50.0",
-        "eslint-config-next": "13.5.4",
+        "@typescript-eslint/eslint-plugin": "^6.10.0",
+        "@typescript-eslint/parser": "^6.10.0",
+        "eslint": "8.53.0",
+        "eslint-config-next": "14.0.1",
         "eslint-config-prettier": "latest",
-        "eslint-config-turbo": "1.10.15"
+        "eslint-config-turbo": "1.10.16"
     },
     "peerDependencies": {
         "eslint-plugin-prettier": "latest",
@@ -22,7 +22,7 @@
         "prettier": "latest"
     },
     "devDependencies": {
-        "eslint-plugin-prettier": "latest",
+        "eslint-plugin-prettier": "5.0.1",
         "eslint-plugin-react": "7.33.2",
         "prettier": "3.0.3"
     }
