--- a/.gitignore
+++ b/.gitignore
@@ -182,12 +182,12 @@ packages/ipfs-pinner/src/contracts
 
 packages/subgraph/src/gen
 
-# Test results & reposts
-test-results/
-playwright-report/
+# Test results & reports
+packages/frontend/test-results
+packages/frontend/playwright-report
 
 # Cache
-playwright/.cache/
+packages/frontend/playwright/.cache/
 
 # Metamask
 metamask-*
