--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,13 @@ jobs:
         run: yarn lint
       - name: Test
         run: yarn test
+      - name: Cypress run
+        uses: cypress-io/github-action@v6
+        with:
+          record: true
+          build: yarn build
+          start: yarn start
+          command: yarn test:e2e
       - name: Build
         run: yarn build
       - name: Size check
