--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -35,12 +35,13 @@
         "config-react-env": "./scripts/config-react-env.js",
         "start:staging": "STAGING=true craco start",
         "start": "craco start",
-        "test:e2e": "yarn prepare-fathom && playwright test"
+        "test:e2e": "yarn prepare-fathom && yarn playwright test"
     },
     "dependencies": {
         "@carrot-kpi/react": "*",
         "@carrot-kpi/sdk": "*",
         "@carrot-kpi/ui": "*",
+        "@synthetixio/synpress": "^3.7.2-beta.9",
         "class-variance-authority": "^0.7.0",
         "dayjs": "^1.11.10",
         "eth-provider": "^0.13.6",
