fix(chore): add start staging script to turbo

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
         env:
           DEBUG: "@cypress/github-action"
         with:
+          runTests: false
           record: true
           build: yarn build
           start: yarn start:staging
