--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,6 +15,8 @@ jobs:
   playwright-tests:
     timeout-minutes: 10
     runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.40.0-jammy
     strategy:
       matrix:
         node-version: [18.x]
@@ -36,3 +38,5 @@ jobs:
         run: npx playwright install --with-deps
       - name: Run Playwright tests
         run: yarn test:e2e
+        env:
+          HOME: /root
