--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -70,6 +70,7 @@
         "@commitlint/cli": "^18.4.1",
         "@commitlint/config-conventional": "^18.4.0",
         "@craco/craco": "^7.1.0",
+        "@faker-js/faker": "^8.3.1",
         "@fontsource/ibm-plex-mono": "^5.0.3",
         "@playwright/test": "^1.39.0",
         "@react-spring/web": "^9.7.3",
