fix: run tests on sepolia, add new env, change docker-compose command

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -38,4 +38,4 @@ jobs:
             ${{ runner.os }}-buildx-
       - name: Run e2e tests
         run: |
-          docker-compose -f docker-compose.yml up synpress
+          --profile synpress --profile foundry up --build --exit-code-from synpress
