--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -30,7 +30,7 @@ jobs:
             ${{ runner.os }}-buildx-
       - name: Run e2e tests
         run: |
-          docker-compose -f docker-compose.yml --env-file ${{ matrix.resolution }}-res.env --profile synpress --profile foundry up --build --exit-code-from synpress
+          docker-compose -f docker-compose.yml --profile synpress --profile foundry up --build --exit-code-from synpress
         env:
           PRIVATE_KEY: ""
           NETWORK_NAME: sepolia
