--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,39 @@
 version: "3.9"
+
 services:
   synpress:
     profiles:
       - synpress
     container_name: synpress
-    build: ./packages/frontend
+    build: .
     environment:
-      - SKIP_METAMASK_SETUP=true
-      - NETWORK_NAME=sepolia
       - DISPLAY=display:0.0
+      - SKIP_METAMASK_SETUP=true
+      - CYPRESS_PRIVATE_KEY_WITH_FUNDS=${CYPRESS_PRIVATE_KEY_WITH_FUNDS}
+      - DEBUG=${DEBUG}
       - CYPRESS_DOCKER_RUN=true
-      - CI=true
-      - SYNDEBUG=true
-      - IS_TESTNET=true
-      - INFURA_PROJECT_ID=${INFURA_PROJECT_ID}
-      - WALLETCONNECT_PROJECT_ID=${WALLETCONNECT_PROJECT_ID}
-      - FATHOM_SITE_ID=${FATHOM_SITE_ID}
-      - FATHOM_API_KEY=${FATHOM_API_KEY}
-    entrypoint: []
-    working_dir: /app
-    command: >
-      yarn test:e2e
+      - GH_PAT=${GH_PAT}
+      - GH_USERNAME=${GH_USERNAME}
+      - CI=${CI}
+      # cypress dashboard
+      - CYPRESS_GROUP=${CYPRESS_GROUP}
+      - GITHUB_TOKEN=${GITHUB_TOKEN}
+      - CYPRESS_PROJECT_ID=${CYPRESS_PROJECT_ID}
+      - CYPRESS_RECORD_KEY=${CYPRESS_RECORD_KEY}
+      - COMMIT_INFO_MESSAGE=${COMMIT_INFO_MESSAGE}
+      - COMMIT_INFO_SHA=${COMMIT_INFO_SHA}
     depends_on:
       - display
       - video
+    entrypoint: []
+    working_dir: /app
+    volumes:
+      - ./docker/videos:/app/tests/e2e/videos
+      - ./docker/screenshots:/app/tests/e2e/screenshots
+    command: >
+      bash -c 'echo -n "======> local noVNC URL:
+      http://localhost:8080/vnc.html?autoconnect=true " && yarn wait-on
+      http://display:8080 && yarn test:e2e'
     networks:
       - x11
 
@@ -34,6 +44,8 @@ services:
     image: synthetixio/display:016121eafdfff448414894d0ca5a50b1d72b62eb-base
     environment:
       - RUN_XTERM=no
+      - DISPLAY_WIDTH=${DISPLAY_WIDTH}
+      - DISPLAY_HEIGHT=${DISPLAY_HEIGHT}
     ports:
       - "8080:8080"
     networks:
@@ -48,6 +60,8 @@ services:
       - ./docker/videos-ci:/videos
     environment:
       - FILE_NAME=CI-full-video.mp4
+      - SE_SCREEN_WIDTH=${SE_SCREEN_WIDTH}
+      - SE_SCREEN_HEIGHT=${SE_SCREEN_HEIGHT}
     depends_on:
       - display
     networks:
