--- a/packages/frontend/Dockerfile
+++ b/packages/frontend/Dockerfile
@@ -1,10 +1,17 @@
-FROM --platform=linux/amd64 synthetixio/docker-e2e:18.13-ubuntu as base
+# syntax=docker/dockerfile:1
+FROM --platform=linux/amd64 synthetixio/docker-e2e:18.16-ubuntu as base
 
 RUN mkdir /app
 WORKDIR /app
 
+RUN apt update && apt install -y nginx
+
+COPY nginx.conf /etc/nginx/sites-available/default
+
 COPY package.json ./
 
+FROM base as test
+
 RUN yarn install
-RUN npx playwright install --with-deps
+
 COPY . .
