fix: pass envs to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,10 @@ services:
       - GH_PAT=${GH_PAT}
       - GH_USERNAME=${GH_USERNAME}
       - CI=${CI}
+      - INFURA_PROJECT_ID=${INFURA_PROJECT_ID}
+      - WALLETCONNECT_PROJECT_ID=${WALLETCONNECT_PROJECT_ID}
+      - FATHOM_SITE_ID=${FATHOM_SITE_ID}
+      - FATHOM_API_KEY=${FATHOM_API_KEY}
       # cypress dashboard
       - CYPRESS_GROUP=${CYPRESS_GROUP}
       - GITHUB_TOKEN=${GITHUB_TOKEN}
