feat(qa): updated smoke test, url class

--- a/turbo.json
+++ b/turbo.json
@@ -51,6 +51,7 @@
         "CI",
         "STAGING",
         "METAMASK_VERSION",
-        "HEADLESS_MODE"
+        "HEADLESS_MODE",
+        "ENV"
     ]
 }
