--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     environment:
       - DISPLAY=display:0.0
       - SKIP_METAMASK_SETUP=true
+      - SKIP_METAMASK_INSTALL=true
       - CYPRESS_PRIVATE_KEY_WITH_FUNDS=${CYPRESS_PRIVATE_KEY_WITH_FUNDS}
       - DEBUG=${DEBUG}
       - CYPRESS_DOCKER_RUN=true
