--- a/.github/workflows/playwright_docker.yml
+++ b/.github/workflows/playwright_docker.yml
@@ -30,31 +30,12 @@ jobs:
 
       - name: Run e2e tests
         run: |
-          docker-compose -f docker-compose.yml --env-file packages/frontend/res.env --profile synpress --profile foundry up --build --exit-code-from synpress
+          docker-compose -f docker-compose_new.yml up synpress
         env:
           COMPOSE_DOCKER_CLI_BUILD: 1
           DOCKER_BUILDKIT: 1
           DOCKER_DEFAULT_PLATFORM: linux/amd64
-          CYPRESS_PRIVATE_KEY_WITH_FUNDS: ${{ secrets.CYPRESS_PRIVATE_KEY_WITH_FUNDS }}
-          GH_PAT: ${{ secrets.GH_PAT }}
-          GH_USERNAME: ${{ secrets.GH_USERNAME }}
-          CI: 1
           INFURA_PROJECT_ID: ${{ secrets.INFURA_PROJECT_ID }}
           WALLETCONNECT_PROJECT_ID: ${{ secrets.WALLETCONNECT_PROJECT_ID }}
           FATHOM_SITE_ID: ${{ secrets.FATHOM_SITE_ID }}
           FATHOM_API_KEY: ${{ secrets.FATHOM_API_KEY }}
-          # cypress dashboard
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          COMMIT_INFO_MESSAGE: ${{ github.event.pull_request.title }}
-          COMMIT_INFO_SHA: ${{ github.event.pull_request.head.sha }}
-
-      - name: Archive e2e artifacts
-        uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # pin@v2
-        if: always()
-        with:
-          name: e2e-artifacts-res
-          path: |
-            docker/videos
-            docker/videos-ci
-            docker/screenshots
-        continue-on-error: true
