--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -35,7 +35,8 @@
         "config-react-env": "./scripts/config-react-env.js",
         "start:staging": "STAGING=true craco start",
         "start": "craco start",
-        "test:e2e": "yarn prepare-fathom && npx playwright test"
+        "test:e2e": "yarn prepare-fathom && npx playwright test",
+        "test:e2e:pw": "start-server-and-test 'yarn start:staging' http://127.0.0.1:3000 'yarn test:e2e'"
     },
     "dependencies": {
         "@carrot-kpi/react": "*",
@@ -105,6 +106,7 @@
         "rollup-plugin-postcss": "^4.0.2",
         "rollup-plugin-typescript2": "^0.36.0",
         "size-limit": "^11.0.0",
+        "start-server-and-test": "^2.0.3",
         "tailwindcss": "^3.3.5",
         "tsconfig": "*",
         "turbo": "^1.10.16",
