chore: fix size-limit files

--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "tsconfig/react.json",
+    "extends": "tsconfig/frontend.json",
     "include": ["./custom.d.ts", "./src/**/*"],
     "compilerOptions": {
         "lib": ["dom", "esnext", "webworker"],
