--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -35,7 +35,7 @@
         "config-react-env": "./scripts/config-react-env.js",
         "start:staging": "STAGING=true craco start",
         "start": "craco start",
-        "test:e2e": "yarn prepare-fathom && npx playwright test",
+        "test:e2e": "yarn prepare-fathom && playwright install && playwright test",
         "test:e2e:pw": "start-server-and-test 'yarn start:staging' http://127.0.0.1:3000 'yarn test:e2e'"
     },
     "dependencies": {
