chore: split e2e task in a standard version and a ci version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Test
         run: yarn test
       - name: Test e2e
-        run: yarn test:e2e
+        run: yarn test:e2e:ci
       - name: Build
         run: yarn build
       - name: Size check
