--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "test": "turbo run test",
         "start:staging": "turbo run start:staging --filter @carrot-kpi/host-frontend",
         "test:e2e": "turbo run test:e2e --filter @carrot-kpi/host-frontend",
+        "test:e2e:ci": "turbo run test:e2e:ci --filter @carrot-kpi/host-frontend",
         "size-limit": "turbo run size-limit",
         "commitlint": "commitlint -e",
         "prepare": "husky install"
