--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -35,13 +35,12 @@
         "config-react-env": "./scripts/config-react-env.js",
         "start:staging": "STAGING=true craco start",
         "start": "craco start",
-        "test:e2e": "yarn prepare-fathom && yarn playwright test"
+        "test:gui": "npx playwright test --project=chromium"
     },
     "dependencies": {
         "@carrot-kpi/react": "*",
         "@carrot-kpi/sdk": "*",
         "@carrot-kpi/ui": "*",
-        "@synthetixio/synpress": "^3.7.2-beta.9",
         "class-variance-authority": "^0.7.0",
         "dayjs": "^1.11.10",
         "eth-provider": "^0.13.6",
@@ -70,7 +69,7 @@
         "@commitlint/config-conventional": "^18.4.0",
         "@craco/craco": "^7.1.0",
         "@fontsource/ibm-plex-mono": "^5.0.3",
-        "@playwright/test": "^1.39.0",
+        "@guardianui/test": "^1.0.4",
         "@react-spring/web": "^9.7.3",
         "@rollup/plugin-commonjs": "^25.0.7",
         "@rollup/plugin-image": "^3.0.3",
