--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "format": "turbo run format",
         "start": "turbo run start",
         "test": "turbo run test",
-        "test:e2e:ci": "turbo run test:e2e --filter @carrot-kpi/host-frontend",
+        "test:e2e:ci": "turbo run test:e2e:ci --filter @carrot-kpi/host-frontend",
         "size-limit": "turbo run size-limit",
         "commitlint": "commitlint -e",
         "prepare": "husky install"
