--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Test e2e
-        run: yarn test:e2e:ci
+        run: yarn test:e2e
       - name: Build
         run: yarn build
       - name: Size check
