--- a/.github/workflows/playwright_docker.yml
+++ b/.github/workflows/playwright_docker.yml
@@ -29,6 +29,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
+      - name: Set up environment file for secrets
+        run: echo "INFURA_PROJECT_ID=${{ secrets.INFURA_PROJECT_ID }}" > .env
+
       - name: Run e2e tests
         env:
           COMPOSE_DOCKER_CLI_BUILD: 1
