--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 env:
+  TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+  TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
+  TURBO_REMOTE_ONLY: true
   INFURA_PROJECT_ID: ${{ secrets.INFURA_PROJECT_ID }}
   WALLETCONNECT_PROJECT_ID: ${{ secrets.WALLETCONNECT_PROJECT_ID }}
   FATHOM_SITE_ID: ${{ secrets.FATHOM_SITE_ID }}
@@ -17,10 +20,6 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x]
-    env:
-      TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
-      TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
-      TURBO_REMOTE_ONLY: true
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -35,10 +34,11 @@ jobs:
         run: yarn lint
       - name: Test
         run: yarn test
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
       - name: Test e2e
-        run: yarn test:e2e
+        uses: cypress-io/github-action@v6
+        with:
+          project: ./packages/frontend
+          start: yarn start:staging 
       - name: Build
         run: yarn build
       - name: Size check
