--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -35,7 +35,7 @@
         "config-react-env": "./scripts/config-react-env.js",
         "start:staging": "STAGING=true craco start",
         "start": "craco start",
-        "test:e2e": "yarn prepare-fathom && playwright test"
+        "test:e2e": "yarn prepare-fathom && start-server-and-test start:staging http-get://127.0.0.1:3000 'cypress open'"
     },
     "dependencies": {
         "@carrot-kpi/react": "*",
@@ -69,6 +69,7 @@
         "@commitlint/cli": "^18.4.3",
         "@commitlint/config-conventional": "^18.4.3",
         "@craco/craco": "^7.1.0",
+        "@ethersproject/experimental": "^5.7.0",
         "@fontsource/ibm-plex-mono": "^5.0.3",
         "@playwright/test": "^1.39.0",
         "@react-spring/web": "^9.7.3",
@@ -105,6 +106,7 @@
         "rollup-plugin-postcss": "^4.0.2",
         "rollup-plugin-typescript2": "^0.36.0",
         "size-limit": "^11.0.1",
+        "start-server-and-test": "^2.0.3",
         "tailwindcss": "^3.3.6",
         "tsconfig": "*",
         "turbo": "^1.11.2",
